searchOut[1] and searchOut[2] now accept variables rename-config.yaml should now be in the same directory as jmx